# passgen

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README_EN.md  debian_control  debian_control.in  passgen.spec  passgen.spec.in
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.rpm/: passgen.spec
rpm/: Cargo.toml
src/: main.rs
