[package]
name = "passgen"
version = "0.1.4"
edition = "2021"
authors = ["Andreas Finck <andreas.finck@icloud.com"]
description = """
A simple command-line password generator.
 This package provides a command-line utility to generate random passwords.
 It supports various options for password length and complexity.
"""

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
cli-clipboard = "0.4.0"
arboard = "3.4.1"
