[package]
name = "passgen"
version = "0.1.4"
release = 1
license = "MIT"
summary = "A simple command-line password generator."
description = "This package provides a command-line utility to generate random passwords.\n
 It supports various options for password length and complexity."
homepage = "https://github.com/afinck/passgen"
requires = ["glibc"]

[files]
# Binary
"target/release/passgen" = "/usr/bin/passgen"
# Static assets
# Templates
